--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -17,6 +17,8 @@ jobs:
     name: Foundry Unit Test
     runs-on: ubuntu-latest
     needs: [Timestamp]
+    env:
+      MULTISIG_ADDRESS: ${{ vars.MULTISIG_ADDRESS }}
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
@@ -32,12 +34,6 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
-
-      - name: Create .env
-        run: |
-          touch .env
-          echo "MULTISIG_ADDRESS=${{ secrets.MULTISIG_ADDRESS }}" >> .env
-
 
       # first, build contracts excluding the tests and scripts. Check contract sizes in this step.
       - name: Run Contract Size check
@@ -58,9 +54,6 @@ jobs:
 
       - name: Run solhint
         run: npx solhint contracts/**/*.sol
-
-      - name: Remove .env
-        run: rm .env
 
 
   # Coverage:
