--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -35,17 +35,17 @@ jobs:
         with:
           version: nightly
 
-      # first, build contracts excluding the tests and scripts. Check contract sizes in this step.
-      - name: Run Contract Size check
-        run: |
-          forge --version
-          forge build --force --sizes --skip test --skip script
+      # # first, build contracts excluding the tests and scripts. Check contract sizes in this step.
+      # - name: Run Contract Size check
+      #   run: |
+      #     forge --version
+      #     forge build --force --sizes --skip test --skip script
 
-      # This step requires full build to be run first
-      - name: Upgrade Safety test
-        run: |
-          forge clean && forge build --build-info
-      # npx @openzeppelin/upgrades-core validate out/build-info
+      # # This step requires full build to be run first
+      # - name: Upgrade Safety test
+      #   run: |
+      #     forge clean && forge build --build-info
+      # # npx @openzeppelin/upgrades-core validate out/build-info
 
       - name: Run Forge tests
         run: |
