--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -47,11 +47,17 @@ jobs:
       #     forge clean && forge build --build-info
       # # npx @openzeppelin/upgrades-core validate out/build-info
 
-      - name: Run Forge tests
+      - name: Run tests
         env:
           MULTISIG_ADDRESS: ${{ vars.MULTISIG_ADDRESS }}
         run: |
           echo $MULTISIG_ADDRESS
+
+      - name: Run Forge tests
+        env:
+          MULTISIG_ADDRESSs: "0xf398C12A45Bc409b6C652E25bb0a3e702492A4ab"  # Dummy value for testing
+        run: |
+          echo $MULTISIG_ADDRESSs
 
 
   # Coverage:
