--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run Forge tests
         env:
-          MULTISIG_ADDRESSs: "0xf398C12A45Bc409b6C652E25bb0a3e702492A4ab"  # Dummy value for testing
+          MULTISIG_ADDRESSs: 0xf398C12A45Bc409b6C652E25bb0a3e702492A4ab  # Dummy value for testing
         run: |
           echo $MULTISIG_ADDRESSs
 
