--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Timestamp]
     env:
-      MULTISIG_ADDRESS: ${{ vars.MULTISIG_ADDRESS }}
+      MULTISIG_ADDRESS: ${{ secrets.MULTISIG_ADDRESS }}
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
