--- a/.github/workflows/foundry_ci.yml
+++ b/.github/workflows/foundry_ci.yml
@@ -55,11 +55,11 @@ jobs:
       - name: Run solhint
         run: npx solhint contracts/**/*.sol
 
-  Coverage:
-    needs: [foundry-test]
-    uses: storyprotocol/gha-workflows/.github/workflows/reusable-forge-code-coverage.yml@main
-    # FOR LOCAL TESTING ONLY
-    # uses: ./../gha-workflows/.github/workflows/reusable-forge-code-coverage.yml
-    with:
-      exclude_paths: 'test/*, script/*'
-      branch_coverage: true
+  # Coverage:
+  #   needs: [foundry-test]
+  #   uses: storyprotocol/gha-workflows/.github/workflows/reusable-forge-code-coverage.yml@main
+  #   # FOR LOCAL TESTING ONLY
+  #   # uses: ./../gha-workflows/.github/workflows/reusable-forge-code-coverage.yml
+  #   with:
+  #     exclude_paths: 'test/*, script/*'
+  #     branch_coverage: true
